src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
@media (max-width: 767px) {
    .events-list {
        margin: 0 auto;
        width: 100%;
        max-width: 450px;
    }
}

.event-details-container, .events-list {
    background-color: white;
}

@media (min-width: 768px) {
    .events-list {
        position: relative;
        width: 50%;
        float: left;
        height: calc(100vh - 64px);
    }

    .event-details-container {
        left: calc(((100vw - 240px) / 2) + 240px);
        top: 64px;
        height: calc(100vh - 64px);
        width: calc(100vw - 240px - (100vw - 240px) / 2);
        overflow-y: auto;
        position: fixed;
        border-left: 2px solid lightgray;
    }
}

@media (min-width: 1200px) {
    .event-details-container {
        left: calc(60vw);
        width: calc(40vw);
    }
}

